tests/negative/pool_zero_cap.far
fun main() -> i64 {
  pool = Pool<i64>(0)
  return 0
}
